fix broken css and change map marker to use id

--- a/public/style/sass/_layout.scss
+++ b/public/style/sass/_layout.scss
@@ -5,6 +5,7 @@
 
 .page-content {
   @include flexbox;
+  flex-direction: column;
   min-height: calc(100vh - #{$header-height});
   width: 100%;
   background-color: #f2f2f2;
